test/e2e/testdata/client-mtls.yaml
apiVersion: v1
data:
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ3N0SDg4dVdtVmJUSTkKTlZHemc1SlVrZFp0dWRpclFOci81SHpqYU9lbmVBVDVZSTFNRmtGVEVVcTFOWU84VHBGYittL3h0N1o1Z0Y2VwpIK2xVZGZOdG96czZmdFFodkhvaFJ5WERuNmxvbU52THVxa1ZuaVQxWHMxN2dKZG9NYW00anVpcmVxWjYrSXFvClU0Ui9yNDFyRmphUWlGNUpkYTdtRjU4VmYrQWZBcW5FU011aG9TYzUyUmVNT0t3T2czaFVYM2NyZFlMcHBIZTUKemxGMS91R045cE1DeFJEdHhySUVQTG9tUXdYTGp5dlJlQmcrZHJlbHpkRHBIdWVlTVNMMVZxSUV1VnZjVDBmNgpqWFFXUndtVzhEWElPR [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6akNDQXJhZ0F3SUJBZ0lVT0dKOUx1VGtKWkU0NmNVaUpGYmJ2bm10elFvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2J6RUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWxaQk1SRXdEd1lEVlFRSERBaFRiMjFsUTJsMAplVEVUTUJFR0ExVUVDZ3dLUlc1MmIzbFFjbTk0ZVRFUU1BNEdBMVVFQ3d3SFIyRjBaWGRoZVRFWk1CY0dBMVVFCkF3d1FiWFJzY3k1bGVHRnRjR3hsTG1OdmJUQWdGdzB5TkRBM01UWXlNalV4TWpOYUdBOHlNVEkwTURZeU1qSXkKTlRFeU0xb3diekVMTUFrR0ExVUVCaE1DVlZNeEN6QUpCZ05WQkFnTUFsWkJNUkV3RHdZRFZRUUhEQWhUYjIxbApRMmwwZVRFVE1CRUdBM [...]
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6akNDQXJhZ0F3SUJBZ0lVT0dKOUx1VGtKWkU0NmNVaUpGYmJ2bm10elFvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2J6RUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWxaQk1SRXdEd1lEVlFRSERBaFRiMjFsUTJsMAplVEVUTUJFR0ExVUVDZ3dLUlc1MmIzbFFjbTk0ZVRFUU1BNEdBMVVFQ3d3SFIyRjBaWGRoZVRFWk1CY0dBMVVFCkF3d1FiWFJzY3k1bGVHRnRjR3hsTG1OdmJUQWdGdzB5TkRBM01UWXlNalV4TWpOYUdBOHlNVEkwTURZeU1qSXkKTlRFeU0xb3diekVMTUFrR0ExVUVCaE1DVlZNeEN6QUpCZ05WQkFnTUFsWkJNUkV3RHdZRFZRUUhEQWhUYjIxbApRMmwwZVRFVE1CRUdBMV [...]
kind: Secret
metadata:
  name: client-mtls-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: client-mtls-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls-settings
      port: 443
      protocol: HTTPS
      hostname: tls-settings.example.com
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: client-tls-settings-certificate
        mode: Terminate
    - name: mtls
      port: 443
      protocol: HTTPS
      hostname: mtls.example.com
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: client-mtls-certificate
        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-client-mtls
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - mtls.example.com
  parentRefs:
    - name: client-mtls-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /client-mtls
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: ctp-client-mtls
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: client-mtls-gateway
    sectionName: mtls
  headers:
    xForwardedClientCert:
      certDetailsToAdd:
        - Subject
        - Issuer
      mode: SanitizeSet
  tls:
    clientValidation:
      caCertificateRefs:
        - kind: "Secret"
          group: ""
          name: "client-mtls-certificate"
---
# openssl req -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -subj '/O=example Inc./CN=example.com' -keyout ca.key -out ca.crt
# cat > openssl.conf  <<EOF
# [req]
#   req_extensions = v3_req
#   prompt = no
#
# [v3_req]
#   keyUsage = keyEncipherment, digitalSignature
#   extendedKeyUsage = serverAuth
#   subjectAltName = @alt_names
# [alt_names]
#   DNS.1 = tls-settings.example.com
# EOF
# openssl req -out tls-settings.example.com.csr -newkey rsa:2048 -nodes -keyout tls-settings.example.com.key -subj "/CN=tls-settings.example.com/O=example organization"
# openssl x509 -req -days 3650 -CA ca.crt -CAkey ca.key -set_serial 0 -in tls-settings.example.com.csr -out tls-settings.example.com.crt -extfile openssl.conf -extensions v3_req
apiVersion: v1
data:
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRREVjUWNWTnM3bmduWjIKZHoycTdibmc5WWFBZEVJaDFQQzBzbGVXcFNxMWVMYm5ualV4TTNmemZKbTE5RGI1OTZ5N1pzVUdoQWJjOGFaYQpIMU5vOVVhVGZFNVl3bDRVU0Rvb1ZOS0M0VWw0aGp4NDk5TSt5MXFEY0pkOE80R2J6UjUvdWMvWjJuem9WRzdqCnFwMGpnOWJhditjcThiZmh0NENOd1NhUmc5ZzZNeDFIZ2xaS3QxcUFiSVVBMGMzbUszRVJzcWVTaUdSZld5c2IKaUZranNOR1dHSjI0ZzZGbWxzKzVWczRvWnMvOEZFcmJKMHZHYTZpSkorYWFTemRoY3krVHNmRXU1ZkJncHJhUQpNU3YzZU80c2k4Z1ArR [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkVENDQWwyZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREF0TVJVd0V3WURWUVFLREF4bGVHRnQKY0d4bElFbHVZeTR4RkRBU0JnTlZCQU1NQzJWNFlXMXdiR1V1WTI5dE1CNFhEVEkwTURreU56RTBNVGN6TjFvWApEVE0wTURreU5URTBNVGN6TjFvd1FqRWhNQjhHQTFVRUF3d1lkR3h6TFhObGRIUnBibWR6TG1WNFlXMXdiR1V1ClkyOXRNUjB3R3dZRFZRUUtEQlJsZUdGdGNHeGxJRzl5WjJGdWFYcGhkR2x2YmpDQ0FTSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU1SeEJ4VTJ6dWVDZG5aM1BhcnR1ZUQxaG9CMFFpSFU4TFN5VjVhbApLclY0dHVlZU5URXpkL [...]
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPekNDQWlPZ0F3SUJBZ0lVZGMwUW5hV09WVjQwRWhtcUdwNHdZMjZKOFFnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5EQTVNamN4TkRFMk5UTmFGdzB6TkRBNU1qVXhOREUyTlROYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUMvMmxGdktkc25ZNDRRTWsyVUlDRGpvb1JkSFlQd0V3WCtaM0ZOcUgveQpRMG44VHNXSnhQa3J1S2 [...]
kind: Secret
metadata:
  name: client-tls-settings-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-client-tls-settings
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - tls-settings.example.com
  parentRefs:
    - name: client-mtls-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /client-tls-settings
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: ctp-client-tls-settings
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: client-mtls-gateway
    sectionName: tls-settings
  tls:
    minVersion: "1.1"
    maxVersion: "1.2"
    ciphers:
      - ECDHE-RSA-AES128-GCM-SHA256
      - AES128-SHA
    ecdhCurves:
      - X25519
      - P-256
    alpnProtocols:
      - http/1.1
